--- a/index.html
+++ b/index.html
@@ -3,106 +3,42 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-  <title>Prayer Timetable • One‑Screen</title>
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png">
-  <link rel="apple-touch-icon" href="favicon.png">
+  <title>Masjid al‑Noor • Iqamah (One‑Screen)</title>
+  <meta name="theme-color" content="#0b1418" />
   <style>
     :root{
-      --bg:#0b1418;          /* page bg */
-      --panel:#12181b;       /* card bg */
-      --accent:#3b82f6;      /* highlight */
-      --muted:#97a3af;       /* subtle text */
-      --ink:#e8f0f2;         /* main text */
-      --gap:8px;             /* space between cards */
-      --radius:18px;         /* card rounding */
+      --bg:#0b1418; --panel:#12181b; --accent:#3b82f6; --muted:#97a3af; --ink:#e8f0f2;
+      --gap:8px; --radius:18px;
     }
-
     *{box-sizing:border-box}
     html,body{height:100%;margin:0}
     body{
-      min-height:100vh;          /* fallbacks */
-      min-height:100svh;         /* modern mobile */
-      min-height:100dvh;         /* dynamic bars */
-      background:var(--bg);
-      color:var(--ink);
-      font-family: ui-rounded, system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif;
-      -webkit-font-smoothing:antialiased;
-      -moz-osx-font-smoothing:grayscale;
-      overflow:hidden;           /* 🚫 no scroll — everything fits */
-      padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+      min-height:100dvh; background:var(--bg); color:var(--ink);
+      font-family:ui-rounded, system-ui, -apple-system, "Segoe UI", Roboto, Arial, "Noto Sans", sans-serif;
+      -webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
+      overflow:hidden; padding:env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
     }
-
-    .app{
-      /* lock to full viewport */
-      height:100%;
-      display:flex;
-      flex-direction:column;
-      gap:var(--gap);
-      padding:10px;
-    }
-
-    /* tiny header strip to keep more room for cards */
+    .app{height:100%;display:flex;flex-direction:column;gap:var(--gap);padding:10px}
     .bar{
-      flex:0 0 auto;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
-      padding:8px 12px;
-      background:rgba(255,255,255,0.04);
-      border:1px solid rgba(255,255,255,0.08);
-      border-radius:12px;
-      font-size:clamp(12px, 2.8vw, 15px);
+      flex:0 0 auto;display:flex;align-items:center;justify-content:space-between;gap:10px;
+      padding:8px 12px;background:rgba(255,255,255,.04);border:1px solid rgba(255,255,255,.08);border-radius:12px;
+      font-size:clamp(12px,2.8vw,15px)
     }
-    .bar .title{font-weight:700; letter-spacing:.2px;}
-    .bar .clock{opacity:.9}
-
-    /* cards area takes the rest of the screen */
-    .cards{
-      flex:1 1 auto;
-      display:flex;              /* ← equal-height stack that always fits */
-      flex-direction:column;
-      gap:var(--gap);
-      height:100%;
-      --n:6;                     /* default, updated by JS to current count */
-    }
-
+    .bar .title{font-weight:800;letter-spacing:.2px}
+    .bar .clock{opacity:.95}
+    .cards{flex:1 1 auto;display:flex;flex-direction:column;gap:var(--gap);height:100%;--n:6}
     .card{
-      flex:1 1 0;                /* each card expands equally to fill column */
-      min-height:0;              /* avoid overflow on small screens */
-      background:var(--panel);
-      border:1px solid rgba(255,255,255,0.08);
-      border-radius:var(--radius);
-      padding:12px 14px;
-      display:flex;
-      align-items:center;
-      justify-content:space-between;
-      gap:10px;
-      box-shadow:0 2px 10px rgba(0,0,0,.25);
+      flex:1 1 0;min-height:0;background:var(--panel);border:1px solid rgba(255,255,255,.08);border-radius:var(--radius);
+      padding:12px 14px;display:flex;align-items:center;justify-content:space-between;gap:10px;box-shadow:0 2px 10px rgba(0,0,0,.25)
     }
-
-    .left{display:flex; align-items:center; gap:12px; min-width:0}
-    .name{
-      font-weight:800;
-      letter-spacing:.3px;
-      text-transform:uppercase;
-      font-size:clamp(13px, calc(2.2vh * (6 / var(--n))), 18px);
-      white-space:nowrap;
-    }
-    .sub{color:var(--muted); font-size:clamp(11px, 2.1vw, 13px)}
-
-    .time{
-      font-variant-numeric:tabular-nums;
-      font-size:clamp(18px, calc(3.8vh * (6 / var(--n))), 28px);
-      font-weight:900;
-    }
-
-    .card.next{ outline:2px solid var(--accent); box-shadow:0 0 0 4px rgba(59,130,246,.25)}
-    .pill{ font-size:11px; padding:2px 8px; border-radius:999px; background:rgba(255,255,255,.06); border:1px solid rgba(255,255,255,.1)}
-    .count{ font-size:clamp(11px,2.2vw,13px); color:var(--muted)}
-
-    /* small footer note (optional) */
-    .foot{ flex:0 0 auto; text-align:center; color:var(--muted); font-size:12px; opacity:.85 }
+    .left{display:flex;align-items:center;gap:12px;min-width:0}
+    .name{font-weight:800;letter-spacing:.3px;text-transform:uppercase;font-size:clamp(13px,calc(2.2vh*(6/var(--n))),18px);white-space:nowrap}
+    .sub{color:var(--muted);font-size:clamp(11px,2.1vw,13px)}
+    .time{font-variant-numeric:tabular-nums;font-size:clamp(18px,calc(3.8vh*(6/var(--n))),28px);font-weight:900}
+    .card.next{outline:2px solid var(--accent);box-shadow:0 0 0 4px rgba(59,130,246,.25)}
+    .pill{font-size:11px;padding:2px 8px;border-radius:999px;background:rgba(255,255,255,.06);border:1px solid rgba(255,255,255,.1)}
+    .count{font-size:clamp(11px,2.2vw,13px);color:var(--muted)}
+    .foot{flex:0 0 auto;text-align:center;color:var(--muted);font-size:12px;opacity:.85}
   </style>
 </head>
 <body>
@@ -111,53 +47,17 @@
       <div class="title">Masjid al‑Noor • Iqamah</div>
       <div class="clock" id="clock">--:--</div>
     </div>
-
-    <div class="cards" id="cards">
-      <!-- Cards are injected by JS from the schedule[] below -->
-    </div>
-
+    <div class="cards" id="cards"></div>
     <div class="foot">All times local • auto‑scales to fit one screen</div>
   </div>
 
   <script>
-    // ---- Editable data (fallback). Replace with your own loader if desired.
-    // Display labels and example times; 24h strings recommended.
-    const schedule = [
-      { key:"fajr",     label:"Fajr",     time:"05:10", jamaat:"05:30" },
-      { key:"sunrise",  label:"Sunrise",  time:"06:27" },
-      { key:"dhuhr",    label:"Dhuhr",    time:"13:21", jamaat:"13:30" },
-      { key:"asr",      label:"Asr",      time:"17:25", jamaat:"17:45" },
-      { key:"maghrib",  label:"Maghrib",  time:"20:29", jamaat:"20:29" },
-      { key:"isha",     label:"Isha",     time:"21:58", jamaat:"22:15" }
-    ];
-
-    // Optional: if you later expose a CSV/JSON endpoint on the same origin,
-    // you can fetch it here and replace `schedule`. Keep CORS in mind.
-    // Example CSV headers: key,label,time,jamaat
-    async function tryLoadCSV(url){
-      try{
-        const res = await fetch(url, {cache:"no-store"});
-        if(!res.ok) return;
-        const text = await res.text();
-        const rows = text.trim().split(/\r?\n/).map(r=>r.split(","));
-        const [head,...body] = rows;
-        const idx = (name)=> head.indexOf(name);
-        const data = body.map(r=>({
-          key: r[idx("key")],
-          label: r[idx("label")],
-          time: r[idx("time")],
-          jamaat: r[idx("jamaat")]||""
-        }));
-        if(data.length) schedule.splice(0,schedule.length,...data);
-      }catch(e){ /* silent fallback to built‑in schedule */ }
-    }
-    // Uncomment and point to your hosted file once available:
-    // tryLoadCSV("/prayertime.csv");
-
-    const cardsEl = document.getElementById('cards');
+    const CSV_URL = "https://iqamah.lancasterisoc.org/prayertime.csv";
+    const CACHE_KEY = "oneScreenCSVv1";
+    const cardsEl = document.getElementById("cards");
 
     function h(tag, attrs={}, ...kids){
-      const el = document.createElement(tag);
+      const el=document.createElement(tag);
       for(const [k,v] of Object.entries(attrs||{})){
         if(k==="class") el.className=v; else if(k==="text") el.textContent=v; else el.setAttribute(k,v);
       }
@@ -165,74 +65,149 @@
       return el;
     }
 
-    function parseHM(s){
-      const m = /^(\d{1,2}):(\d{2})$/.exec(s||"");
-      if(!m) return null;
-      const d = new Date();
-      d.setSeconds(0,0);
-      d.setHours(+m[1], +m[2], 0, 0);
-      return d;
+    function parseTimeToToday(s){
+      if(!s) return null; s=String(s).trim().toLowerCase().replace(/\./g,":");
+      let m=s.match(/^(\d{1,2}):(\d{2})(?::(\d{2}))?(?:\s*([ap]m))?$/); if(!m) return null;
+      let h=+m[1], mi=+m[2], se=m[3]?+m[3]:0, ap=m[4];
+      if(ap==="pm"&&h<12)h+=12; if(ap==="am"&&h===12)h=0;
+      const d=new Date(); d.setSeconds(0,0); d.setHours(h,mi,se,0); return d;
     }
-
-    function fmt(date){
-      return date.toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
-    }
-
     function minutesUntil(target){
-      const now = new Date();
-      const diffMs = target - now;
-      const mins = Math.round(diffMs/60000);
-      const sign = mins < 0 ? -1 : 1;
-      const abs = Math.abs(mins);
-      const h = Math.floor(abs/60), m = abs%60;
-      return {mins, text: (sign<0?"-":"") + (h?`${h}h `:"") + `${m}m`};
+      const now=new Date(); const diffMs=target-now; const mins=Math.round(diffMs/60000);
+      const abs=Math.abs(mins); const h=Math.floor(abs/60), m=abs%60;
+      return {mins,text:(mins<0?"-":"")+(h?`${h}h `:"")+`${m}m`};
     }
 
-    function build(){
-      // clear and (re)render
-      cardsEl.innerHTML = '';
+    function cleanText(t){return (t||"").replace(/^﻿/,"").replace(/\u0000/g,"").replace(/\r\n/g,"\n").replace(/\r/g,"\n")}
+    function firstNonEmptyLine(t){return cleanText(t).split(/\n/).map(l=>l.trim()).find(Boolean)||""}
+    function detectDelim(t){const h=firstNonEmptyLine(t); const c=[",",";","\\t","|"]; let best=",",n=0; for(const d of c){const m=(h.split(d).length-1); if(m>n){best=d;n=m}} return best}
+    function parseCSV(text){
+      text=cleanText(text); if(!text.trim()) return {headers:[],data:[]};
+      const d=detectDelim(text); const rows=[]; let cur="",row=[],q=false;
+      for(let i=0;i<text.length;i++){
+        const c=text[i], n=text[i+1];
+        if(q){ if(c=='"'&&n=='"'){cur+='"'; i++;} else if(c=='"'){q=false;} else cur+=c; }
+        else { if(c=='"') q=true; else if(c===d){ row.push(cur); cur=""; } else if(c=="\n"){ row.push(cur); rows.push(row); row=[]; cur=""; } else cur+=c; }
+      }
+      if(cur.length||row.length){ row.push(cur); rows.push(row); }
+      while(rows.length && rows[0].every(x=>String(x||"").trim()==="")) rows.shift();
+      if(!rows.length) return {headers:[],data:[]};
+      const headers = rows[0].map(h=>String(h||"").trim());
+      const data = rows.slice(1).filter(r=>r.some(x=>String(x||"").trim()!==""))
+        .map(r=>Object.fromEntries(headers.map((h,i)=>[h, r[i]??""])));
+      return {headers,data};
+    }
+    const norm = s => String(s||"").toLowerCase().replace(/[\\s_\\-]/g,"");
 
-      // let CSS know how many cards we have so font sizes scale
-      cardsEl.style.setProperty('--n', schedule.length);
+    function mapRowsToSchedule(headers, row){
+      // 1) Simple schema support: key,label,time,jamaat (one row per prayer)
+      const hasSimple = ["key","label","time"].every(h=>headers.includes(h));
+      if(hasSimple){
+        return [{ key:row.key, label:row.label, time:String(row.time||"").trim(), jamaat:String(row.jamaat||"").trim() }]
+               .filter(x=>x.label && (x.time||x.jamaat));
+      }
+      // 2) Wide row schema (Date,Fajr,Dhuhr,... with possible Iqamah columns)
+      const H = headers.map(h=>[h, norm(h)]);
+      const find = (rxArr)=>{
+        const cand = H.filter(([_,l])=>rxArr.some(rx=>rx.test(l)));
+        cand.sort((a,b)=>{ const w=l=>(/iqama?h?|jama?a?h?/.test(l)?2:/begin|adhan|athan|start/.test(l)?1:0); return w(b[1])-w(a[1]); });
+        return cand[0]?.[0]||null;
+      };
+      const take = c => String(row[c]||"").trim();
+      const hhmm = s => (String(s||"").match(/(\d{1,2}):(\d{2})/) ? String(s).replace(/^(\d{1,2}):(\d{2}).*/, (_,h,m)=>h.padStart(2,"0")+":"+m) : s);
+      const def = (label, pats)=>{
+        const col=find(pats); if(!col) return null;
+        const isIq = /iqama?h?|jama?a?h?/.test(norm(col));
+        return { key:label.toLowerCase(), label, time: isIq ? "" : hhmm(take(col)), jamaat: isIq ? hhmm(take(col)) : "" };
+      };
+      return [
+        def("Fajr",   [/fajr/]),
+        { key:"sunrise", label:"Sunrise", time:hhmm(take(find([/sunrise/]))), jamaat:"" },
+        def("Dhuhr",  [/dhuhr/,/dhur/,/duhr/,/zuhr/,/zuhur/]),
+        def("Asr",    [/asr/]),
+        def("Maghrib",[/maghrib/,/magrib/]),
+        def("Isha",   [/isha/,/ishaa/,/isha'?a?/])
+      ].filter(Boolean).filter(x=>x.time||x.jamaat);
+    }
 
-      const now = new Date();
-      // find next upcoming time among iqamah (jamaat) if present, else the adhan time
-      const withDates = schedule.map(row => {
-        const when = parseHM(row.jamaat || row.time);
-        if(when && when < now){ when.setDate(when.getDate()+1); } // roll to tomorrow if passed
+    function parseDate(s){
+      if(!s) return null; s=String(s).trim();
+      const y=new Date().getFullYear();
+      let m=s.match(/^(\d{1,2})[\/-](\d{1,2})(?:[\/-](\d{2,4}))?$/);
+      if(m){ const d=+m[1], mo=+m[2], yy=m[3]? (+m[3]<100?2000+ +m[3]:+m[3]) : y; return new Date(yy,mo-1,d); }
+      m=s.match(/^(\d{4})-(\d{2})-(\d{2})$/); if(m) return new Date(+m[1],+m[2]-1,+m[3]);
+      const t=Date.parse(s); return isNaN(t)?null:new Date(t);
+    }
+
+    async function loadSchedule(){
+      try{
+        const res = await fetch(CSV_URL + (CSV_URL.includes("?")?"&":"?") + "t=" + Date.now(), {cache:"no-store"});
+        if(!res.ok) throw new Error("HTTP "+res.status);
+        const text = await res.text();
+        localStorage.setItem(CACHE_KEY, text);
+        const {headers, data} = parseCSV(text);
+        if(!headers.length || !data.length) throw new Error("CSV empty");
+        const hasDate = headers.some(h=>norm(h)==="date");
+        if(hasDate){
+          const dCol = headers.find(h=>norm(h)==="date");
+          const today = new Date();
+          const row = data.find(r=>{const d=parseDate(r[dCol]);return d && d.getFullYear()===today.getFullYear() && d.getMonth()===today.getMonth() && d.getDate()===today.getDate();}) || data[0];
+          return mapRowsToSchedule(headers, row);
+        }else{
+          const out=[]; for(const r of data){ out.push(...mapRowsToSchedule(headers, r)); } return out;
+        }
+      }catch(e){
+        const cached = localStorage.getItem(CACHE_KEY);
+        if(cached){
+          const {headers,data}=parseCSV(cached);
+          if(headers.length && data.length){
+            if(headers.some(h=>norm(h)==="date")) return mapRowsToSchedule(headers, data[0]);
+            const out=[]; for(const r of data) out.push(...mapRowsToSchedule(headers, r)); return out;
+          }
+        }
+        return [];
+      }
+    }
+
+    function build(schedule){
+      cardsEl.innerHTML="";
+      if(!schedule.length){ cardsEl.innerHTML='<div class="card" style="justify-content:center">No data</div>'; return; }
+      cardsEl.style.setProperty("--n", schedule.length);
+
+      const now=new Date();
+      const withDates = schedule.map(row=>{
+        const when = parseTimeToToday(row.jamaat || row.time);
+        if(when && when < now) when.setDate(when.getDate()+1);
         return {...row, when};
       });
       const upcoming = withDates.filter(x=>x.when).sort((a,b)=>a.when-b.when)[0];
 
       for(const row of withDates){
-        const left = h('div', {class:'left'},
-          h('div', {class:'name', text: row.label}),
-          row.jamaat ? h('div', {class:'pill', text:'Jamaat'}) : null,
-          h('div', {class:'sub', text: row.jamaat ? `Adhan ${row.time}` : 'Sunrise'})
+        const isSunrise = /sunrise/i.test(row.label||"");
+        const left = h("div",{class:"left"},
+          h("div",{class:"name",text:row.label||""}),
+          (!isSunrise && row.jamaat) ? h("div",{class:"pill",text:"Jamaat"}) : null,
+          (row.time && !isSunrise) ? h("div",{class:"sub",text:`Adhan ${row.time}`}) : (isSunrise ? h("div",{class:"sub",text:"—"}) : null)
         );
-        const right = h('div', {},
-          h('div', {class:'time', text: row.jamaat ? row.jamaat : row.time}),
-          row.when ? h('div', {class:'count', text: minutesUntil(row.when).text + ' • left'}) : null
+        const right = h("div",{},
+          h("div",{class:"time",text: row.jamaat || row.time || "—"}),
+          row.when ? h("div",{class:"count",text: minutesUntil(row.when).text + " • left"}) : null
         );
-        const card = h('div', {class:'card' + (upcoming && upcoming.key===row.key ? ' next':'' )}, left, right);
+        const card = h("div",{class:"card"+(upcoming && upcoming.label===row.label ? " next":"")}, left, right);
         cardsEl.appendChild(card);
       }
     }
 
-    function tickClock(){
-      const el = document.getElementById('clock');
-      el.textContent = new Date().toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
-    }
+    function tickClock(){ document.getElementById("clock").textContent = new Date().toLocaleTimeString([], {hour:"2-digit", minute:"2-digit"}); }
 
-    // Init
-    build();
-    tickClock();
-    setInterval(tickClock, 1000*15);
-
-    // Rebuild on visibility/orientation changes (in case of address bar height changes)
-    addEventListener('visibilitychange', () => { if(!document.hidden) build(); });
-    addEventListener('orientationchange', () => build());
-    addEventListener('resize', () => build());
+    (async function init(){
+      const schedule = await loadSchedule();
+      build(schedule);
+      tickClock(); setInterval(tickClock, 15000);
+      addEventListener("resize", ()=>build(schedule));
+      addEventListener("orientationchange", ()=>build(schedule));
+      addEventListener("visibilitychange", ()=>{ if(!document.hidden) build(schedule); });
+    })();
   </script>
 </body>
 </html>
